--- a/styles/College_Picture.css
+++ b/styles/College_Picture.css
@@ -11,9 +11,15 @@ img{
 }
 
 .row > div{
-    flex-grow: 1;
+    flex: 1;
 }
 
 .vertical-college img{
-    height: 50%;
+    height: calc((100% - 5px)/2);
+}
+
+.square-college{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5px;
 }
