--- a/styles/College_Picture.css
+++ b/styles/College_Picture.css
@@ -23,3 +23,24 @@ img{
     grid-template-columns: repeat(2, 1fr);
     gap: 5px;
 }
+
+/* Responsive Media Query */
+
+/* Small devices */
+@media screen and (max-width: 576px) {
+    .row{
+        flex-direction: column;
+        height: auto;
+    }
+    .square-college{
+        grid-template-columns: 1fr;
+    }
+}
+
+/* Medium devices */
+@media screen and (min-width: 577px) and (max-width: 992px) {
+    .row{
+        flex-direction: column;
+        height: auto;
+    }
+}
